# calc

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
src/: main.rs
src/assets/: tailwind.css
