[package]
name = "calc"
version = "0.1.0"
authors = ["Uriah <codeitlikemiley@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-desktop = { version = "0.4" }
dioxus = { version = "0.4" }

# Debug
dioxus-logger = "0.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.4.0"
